# Practice

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
PracticeDemo/: build.gradle
PracticeDemo/src/main/: AndroidManifest.xml
PracticeDemo/src/main/res/drawable/: seek_indeterminate_bg.xml  web_view_back.xml  web_view_forward.xml
PracticeDemo/src/main/res/layout/: activity_android_sqlite_pra.xml  activity_bitmap_region_decoder_pra.xml  activity_camera2_pra.xml  activity_canvas_pra.xml  activity_complex_pra.xml  activity_easy_video_view_pra.xml  activity_fragment_tab_host.xml  activity_glide_pra.xml  activity_handler_barrier_pra.xml  activity_jni_pra.xml  activity_listview_pra.xml  activity_main.xml  activity_native_recycler.xml  activity_nested_view.xml  activity_photo_select_pra.xml  activity_recyclerview_pra.xml  activity_rxjava_pra.xml  activity_service_pra.xml  activity_show_font_metrics.xml  activity_surface_view_pra.xml  activity_tab.xml  activity_video_view_pra.xml  activity_view_pager.xml  activity_viewpage_tablayout_pra.xml  activity_webview_player_pra.xml  fragment_00.xml  fragment_01.xml  fragment_02.xml  fragment_03.xml  fragment_04.xml  fragment_draw_pra.xml  fragment_paint_pra.xml  layout_banner.xml  native_recycler_adapter_item.xml  player_control_view.xml  player_view.xml  pra_listview_item.xml  pra_recycler_view_item.xml  root_toolbar_layout.xml  view_rich_web.xml
PracticeDemo/src/main/res/values/: attr_custom_draw_pra.xml  attrs.xml  colors.xml  strings.xml  styles.xml
jnilibrary/: README.txt  build.gradle
jnilibrary/src/main/: AndroidManifest.xml
jnilibrary/src/main/cpp/: CMakeLists.txt  hello-jni.c  log.h
jnilibrary/src/main/res/values/: strings.xml
router/: build.gradle
router/src/main/: AndroidManifest.xml
(+151 files in other folders)
